# f1_pico-core

./: .gitmodules  CMakeLists.txt
lib/ADXL345/: ADXL345.cpp  ADXL345.h  CMakeLists.txt
lib/ADXL345_RP2040/: CMakeLists.txt
lib/MCP9808/: MCP9808.cpp  MCP9808.h
lib/MPL3115A2/: CMakeLists.txt  MPL3115A2.cpp  MPL3115A2.h
src/: CMakeLists.txt  hw_config.cpp  main.cpp  simple.proto
